# brendanhay.github.io

./: CNAME  Gemfile  _config.yml  _posts  atom.xml  consulting.md  index.html  keybase.txt
_includes/: head.html  sidebar.html
_layouts/: archive.html  post.html
_posts/: 2014-11-22-amazonka-comprehensive-haskell-aws-client.md  2015-08-16-amazonka-1-0-release.md  2015-09-14-amazonka-s3-encryption.md  2015-10-08-gogol-comprehensive-haskell-google-client.md  2015-10-09-amazonka-reinvent-libraries.md  2015-10-24-gogol-comprehensive-haskell-google-client.md  2016-03-21-amazonka-additions.md  2016-03-27-typed-authentication.md  2016-05-11-typed-authentication.md  2016-05-26-typed-authorisation-scopes.md  2016-08-06-credentials.md  2016-08-07-credentials.md  2016-08-08-credentials.md  2016-08-09-credentials.md
_posts/2016-03-27-typed-authentication/: typed-authentication.cabal
projects/typed-authentication/: stack.yaml  typed-authentication.cabal
projects/typed-authentication/src/: Simple.hs  TypeFamilies.hs
public/css/: hyde.css  poole.css  syntax.css
