name:                  typed-authentication
version:               0.0.0
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            brendan.g.hay@gmail.com
copyright:             Copyright (c) 2016 Brendan Hay
category:              ACME
build-type:            Simple
cabal-version:         >= 1.10

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    exposed-modules:

    build-depends:
        base >= 4.7
